--- a/process-mining-web/src/main/webapp/resources/index.html
+++ b/process-mining-web/src/main/webapp/resources/index.html
@@ -17,13 +17,18 @@
             must use Internet Explorer, make it version 9 or greater).
         </div>
         <![endif]-->
-        <div id="split-container">
-            <div id="graph-container" style="height: 460px; visibility: visible;">
-                <div id="graph" style="display: block; height: 1500px;"></div>
-            <div id="docs-container" style="display: none;"></div>
+       <div id="split-container">
+            <a class="btn btn-default nav-button" id="nav-list" href="list.php<?php echo $dataset_qs; ?>">
+                View list
+            </a>
+            <div id="graph-container">
+                <div id="graph"></div>
+            </div>
+            <div id="docs-container">
+                <a id="docs-close" href="#">&times;</a>
+                <div id="docs" class="docs"></div>
             </div>
         </div>
-        
         <script th-src="resources/js/jquery-1.10.2.min.js"></script>
         <script src="resources/js/jquery.browser.min.js"></script>
         <script src="resources/js/d3.v3.min.js"></script>
@@ -33,8 +38,8 @@
             var config = {  
             	    "title":"Database process documentation",
             	    "graph":{  
-            	        "linkDistance":100,
-            	        "charge":-400,
+            	        "linkDistance":400,
+            	        "charge":-200,
             	        "height":1800,
             	        "numColors":12,
             	        "labelPadding":{  
@@ -49,7 +54,7 @@
             	            "top":12,
             	            "bottom":12
             	        },
-            	        "ticksWithoutCollisions":50
+            	        "ticksWithoutCollisions":200
             	    },
             	    "types":{  
             	        "activity":{  
